# SentriGate

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_api.py  setup_uv.sh  supervisord.conf
scripts/: monitoring.py
src/: main.py
src/alembic/: audit_logs.sql
src/alembic/versions/: create_audit_log_table.py
src/app/: __init__.py
src/app/api/: __init__.py
src/app/api/endpoints/: search.py
src/app/core/: __init__.py  config.py
src/app/db/: __init__.py  models.py  session.py
src/app/qdrant/: __init__.py  client.py  embedding.py
src/app/rules/: __init__.py  rule_checker.py
src/app/schemas/: collections.py  ingestion.py  query.py  search_results.py
src/app/security/: __init__.py  hash_utils.py
src/app/services/: auth_service.py  ingestion_service.py  query_service.py
